--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "firebase": "^11.6.1",
     "framer-motion": "^11.13.1",
     "html2pdf.js": "^0.10.3",
     "input-otp": "^1.2.4",
@@ -83,7 +84,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
-    "@types/node": "20.16.11",
+    "@types/node": "^20.16.11",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
